--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #OAuth2 App Configuration
-OAuth2AppClientId=
-OAuth2AppClientSecret=
+OAuth2AppClientId=b1f63f63-e2b7-4e26-a54b-f9d8bc92dc49
+OAuth2AppClientSecret=6e0bf553-8f1e-467d-af0b-6adad9905ab3
 OAuth2AppRedirectUri=http://localhost:8080/oauth2redirect
 
 #QBO API endpoint for sandbox
